--- a/coffee.css
+++ b/coffee.css
@@ -17,7 +17,7 @@ jumbotron {
 	color: white;
 	background: #ff5050;
 	text-align: right;
-	padding-left: 20px:
+	padding-left: 20px;
 	padding-right: 20px;
 	margin-top: 10px;
 }
